--- a/env/api-deployment.yml
+++ b/env/api-deployment.yml
@@ -1,42 +1,42 @@
 apiVersion: "extensions/v1beta1"
 kind: "Deployment"
 metadata:
-  name: "ban-api"
+  name: "ban-app-prod"
   namespace: "default"
   labels:
-    app: "ban-api"
+    app: "ban-app-prod"
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: "ban-api"
+      app: "ban-app-prod"
   template:
     metadata:
       labels:
-        app: "ban-api"
+        app: "ban-app-prod"
     spec:
       containers:
-      - name: "ban-api"
-        image: "eu.gcr.io/ban-online/ban-api:1.0.0"
+      - name: "ban-app-prod"
+        image: "eu.gcr.io/ban-online/ban-app:1.0.0"
         imagePullPolicy: Always
         env:
         - name: "MONGODB_URL"
           valueFrom:
             secretKeyRef:
-              name: db
+              name: db-prod
               key: connectionString
 ---
 apiVersion: "autoscaling/v1"
 kind: "HorizontalPodAutoscaler"
 metadata:
-  name: "ban-api-hpa"
+  name: "ban-app-hpa"
   namespace: "default"
   labels:
-    app: "ban-api"
+    app: "ban-app"
 spec:
   scaleTargetRef:
     kind: "Deployment"
-    name: "ban-api"
+    name: "ban-app"
     apiVersion: "apps/v1beta1"
   minReplicas: 1
   maxReplicas: 5
