--- a/env/api-service.yml
+++ b/env/api-service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ban-api
+  name: ban-app
 spec:
   ports:
   - port: 80
     protocol: TCP
     targetPort: 8080
   selector:
-    app: ban-api
+    app: ban-app
   type: LoadBalancer
