--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,5 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-env/api-secret.yml
-ban-api
+env/secret*.yml
+ban-app
