--- a/env/service.yml
+++ b/env/service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ban-app
+  name: ban-app-api
 spec:
   ports:
   - port: 80
     protocol: TCP
     targetPort: 8080
   selector:
-    app: ban-app
+    app: ban-app-api
   type: LoadBalancer
