--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,32 @@
-# Golang CircleCI 2.0 configuration file
-#
 # Check https://circleci.com/docs/2.0/language-go/ for more details
 version: 2
 jobs:
-  build:
+  test:
     docker:
-      # specify the version
-      - image: circleci/golang:1.9
-      
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    #### TEMPLATE_NOTE: go expects specific checkout path representing url
-    #### expecting it in the form of
-    ####   /go/src/github.com/circleci/go-tool
-    ####   /go/src/bitbucket.org/circleci/go-tool
+      - image: circleci/golang:1.
+      - image: mongo:3.4.4-jessie
     working_directory: /go/src/ban-app
     steps:
       - checkout
-
-      # specify any bash command here prefixed with `run: `
       - run: make test
+  build:
+    docker:
+      - image: circleci/golang:1.9
+    working_directory: /go/src/ban-app
+    steps:
+      - checkout
+      - run: make image
+      - run: make release
+
+workflows:
+  version: 2
+  release:
+      jobs:
+        - test
+        - build:
+            requires:
+              - test
+            filters:
+              brances:
+                only: master
+          
