--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - image: circleci/golang:1.8
         environment:
             MONGODB_URL: mongodb://localhost:27017/ban-app
-      - image: mongo:3.4.4-jessie
+      - image: circleci/mongo:3-strech-ram
     working_directory: /go/src/ban-app
     steps:
       - checkout
