--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,7 @@ jobs:
       - run: make test
 
   deploy:
-    docker:
-      - image: circleci/golang:1.11
+    machine: true
     steps:
       - checkout
       - run: |
