--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,19 +20,33 @@ jobs:
               sleep 1
             done
             echo Failed waiting for Mongo && exit 1
-      - run: make test
+      - run:
+          name: Test
+          command: make test
   deploy:
-    machine: true
+    docker:
+      - image: google/cloud-sdk
     steps:
       - checkout
-      - run: |
-          echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
-          gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
-          gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
-          gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://eu.gcr.io
-      - run: make image
-      - run: make release
-      - run: make deploy
+      - run:
+          name: Setup Google Cloud SDK
+          command: | 
+            echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
+            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+            gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
+            gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://eu.gcr.io
+      - run:
+          name: Install binaries
+          command: apt-get install -qq -y make
+      - run: 
+          name: Create Docker image
+          command: make image
+      - run:
+          name: Push Docker image
+          command: make release
+      - run:
+          name: Deploy to Kubernetes
+          command: make deploy
 
 workflows:
   version: 2
