--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
       - run:
           name: Install binaries
           command: apt-get install -qq -y make
+      - setup_remote_docker
       - run: 
           name: Create Docker image
           command: make image
@@ -56,3 +57,6 @@ workflows:
       - deploy:
           requires:
             - test
+          filters:
+            branches:
+              only: master
