--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           name: Setup env vars
 
           command: |
-            export VERSION=$(shell cat ./VERSION)
+            export VERSION=$(cat ./VERSION)
             echo "export VERSION=$VERSION" >> $BASH_ENV
       - run:
           name: Setup Google Cloud SDK
