--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,9 @@ jobs:
       - checkout
       - setup_remote_docker
       - run:
+          name: Setup deps
+          command: apt-get install -qq -y gettext
+      - run:
           name: Setup Google Cloud SDK
           command: | 
             echo $GOOGLE_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
