--- a/env/app.yml
+++ b/env/app.yml
@@ -1,35 +1,35 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ${GOOGLE_PROJECT_ID}-api
+  name: ${GOOGLE_PROJECT_ID}
 spec:
   ports:
   - port: 80
     protocol: TCP
     targetPort: 8080
   selector:
-    app: ${GOOGLE_PROJECT_ID}-api
+    app: ${GOOGLE_PROJECT_ID}
   type: LoadBalancer
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: ${GOOGLE_PROJECT_ID}-api
+  name: ${GOOGLE_PROJECT_ID}
   namespace: default
   labels:
-    app: ${GOOGLE_PROJECT_ID}-api
+    app: ${GOOGLE_PROJECT_ID}
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: ${GOOGLE_PROJECT_ID}-api
+      app: ${GOOGLE_PROJECT_ID}
   template:
     metadata:
       labels:
-        app: ${GOOGLE_PROJECT_ID}-api
+        app: ${GOOGLE_PROJECT_ID}
     spec:
       containers:
-      - name: ${GOOGLE_PROJECT_ID}-api
+      - name: ${GOOGLE_PROJECT_ID}
         image: ${GOOGLE_HOSTNAME}/${GOOGLE_PROJECT_ID}/${GOOGLE_PROJECT_ID}:${CIRCLE_SHA1}
         imagePullPolicy: Always
         env:
