--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,8 +52,9 @@ jobs:
           name: Deploy to Kubernetes
           command: |
             envsubst < env/app.yml > /tmp/app.yml
+            echo /tmp/app.yml
             kubectl apply -f /tmp/app.yml
-            kubectl rollout status -w deployment/${GOOGLE_PROJECT_ID}-api
+            kubectl rollout status -w deployment/${GOOGLE_PROJECT_ID}
 
 workflows:
   version: 2
