--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,13 +60,9 @@ workflows:
   release:
     jobs:
       - test
-      - deploy:
-          context: ban-app-staging
-          requires:
-            - test
           filters:
             branches:
-              only: develop
+              only: master
       - deploy:
           context: ban-app-prod
           requires:
@@ -74,3 +70,16 @@ workflows:
           filters:
             branches:
               only: master
+  release-staging:
+    jobs:
+      - test
+          filters:
+            branches:
+              only: develop
+      - deploy:
+          context: ban-app-staging
+          requires:
+            - test
+          filters:
+            branches:
+              only: develop
