--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,8 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-env/*secret*
 ban-app
+
+*credentials*
+*secret*
+.terraform
