--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,8 @@ jobs:
       - run:
           name: Deploy to Kubernetes
           command: |
-            envsubst < env/app.yml > /tmp/app.yml
+            envsubst < env/k8s/app.yml > /tmp/app.yml
+            cat /tmp/app.yml
             kubectl apply -f /tmp/app.yml
             kubectl rollout status -w deployment/${GOOGLE_PROJECT_ID}
 
