--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,27 +35,25 @@ jobs:
       - run:
           name: Setup Google Cloud SDK
           command: | 
-            echo $GOOGLE_CLUSTER_NAME
             echo $GOOGLE_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
-            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
-            gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
-            gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin ${GOOGLE_HOSTNAME}
+            gcloud --quiet config set project ban-app
+            gcloud --quiet config set compute/zone eu-west-2
+            gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://gcr.io
             gcloud --quiet container clusters get-credentials ${GOOGLE_CLUSTER_NAME}
       - run: 
           name: Create Docker image
-          command: docker build -t ${GOOGLE_PROJECT_ID}:${CIRCLE_SHA1} .
+          command: docker build -t ban-app:${CIRCLE_SHA1} .
       - run:
           name: Push Docker image
           command: |
-            docker tag ${GOOGLE_PROJECT_ID}:${CIRCLE_SHA1} ${GOOGLE_HOSTNAME}/${GOOGLE_PROJECT_ID}/${GOOGLE_PROJECT_ID}:${CIRCLE_SHA1}
-            docker push ${GOOGLE_HOSTNAME}/${GOOGLE_PROJECT_ID}/${GOOGLE_PROJECT_ID}:${CIRCLE_SHA1}
+            docker tag ban-app:${CIRCLE_SHA1} https://gcr.io/ban-app/ban-app:${CIRCLE_SHA1}
+            docker push https://gcr.io/ban-app/ban-app:${CIRCLE_SHA1}
       - run:
           name: Deploy to Kubernetes
           command: |
             envsubst < env/k8s/app.yml > /tmp/app.yml
-            cat /tmp/app.yml
             kubectl apply -f /tmp/app.yml
-            kubectl rollout status -w deployment/${GOOGLE_PROJECT_ID}
+            kubectl rollout status -w deployment/ban-app
 
 workflows:
   version: 2
