--- a/env/k8s/app.yml
+++ b/env/k8s/app.yml
@@ -1,51 +1,51 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ${GOOGLE_PROJECT_ID}
+  name: ban-app
 spec:
   ports:
   - port: 80
     protocol: TCP
     targetPort: 8080
   selector:
-    app: ${GOOGLE_PROJECT_ID}
+    app: ban-app
   type: LoadBalancer
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: ${GOOGLE_PROJECT_ID}
+  name: ban-app
   namespace: default
   labels:
-    app: ${GOOGLE_PROJECT_ID}
+    app: ban-app
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: ${GOOGLE_PROJECT_ID}
+      app: ban-app
   template:
     metadata:
       labels:
-        app: ${GOOGLE_PROJECT_ID}
+        app: ban-app
     spec:
       containers:
-      - name: ${GOOGLE_PROJECT_ID}
-        image: ${GOOGLE_HOSTNAME}/${GOOGLE_PROJECT_ID}/${GOOGLE_PROJECT_ID}:${CIRCLE_SHA1}
+      - name: ban-app
+        image: eu.gcr.io/ban-app/ban-app:latest
         imagePullPolicy: Always
         env:
         - name: MONGODB_URL
           valueFrom:
             secretKeyRef:
-              name: ${GOOGLE_PROJECT_ID}
+              name: ban-app
               key: connection-string
         - name: OXFORD_APP_ID
           valueFrom:
             secretKeyRef:
-              name: ${GOOGLE_PROJECT_ID}
+              name: ban-app
               key: oxford-app-id
         - name: OXFORD_APP_SECRET
           valueFrom:
             secretKeyRef:
-              name: ${GOOGLE_PROJECT_ID}
+              name: ban-app
               key: oxford-app-secret
 ---
