--- a/env/k8s/app.yml
+++ b/env/k8s/app.yml
@@ -1,51 +1,51 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ban-app
+  name: bananapp
 spec:
   ports:
   - port: 80
     protocol: TCP
     targetPort: 8080
   selector:
-    app: ban-app
+    app: bananapp
   type: LoadBalancer
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: ban-app
+  name: bananapp
   namespace: default
   labels:
-    app: ban-app
+    app: bananapp
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: ban-app
+      app: bananapp
   template:
     metadata:
       labels:
-        app: ban-app
+        app: bananapp
     spec:
       containers:
-      - name: ban-app
-        image: eu.gcr.io/ban-app/ban-app:latest
+      - name: bananapp
+        image: eu.gcr.io/bananapp/bananapp:latest
         imagePullPolicy: Always
         env:
         - name: MONGODB_URL
           valueFrom:
             secretKeyRef:
-              name: ban-app
+              name: bananapp
               key: connection-string
         - name: OXFORD_APP_ID
           valueFrom:
             secretKeyRef:
-              name: ban-app
+              name: bananapp
               key: oxford-app-id
         - name: OXFORD_APP_SECRET
           valueFrom:
             secretKeyRef:
-              name: ban-app
+              name: bananapp
               key: oxford-app-secret
 ---
