--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
             gcloud --quiet container clusters get-credentials ${GOOGLE_CLUSTER_NAME}
       - run: 
           name: Create Docker image
-          command: docker build -t bananapp:${CIRCLE_SHA1} .
+          command: docker build -t bananapp:1.0.0 .
       - run:
           name: Push Docker image
           command: |
