--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
       - run:
           name: Push Docker image
           command: |
-            docker tag bananapp:${CIRCLE_SHA1} gcr.io/bananapp/bananapp:1.0.0
+            docker tag bananapp:1.0.0 gcr.io/bananapp/bananapp:1.0.0
             docker push gcr.io/bananapp/bananapp:1.0.0
       - run:
           name: Deploy to Kubernetes
