--- a/env/k8s/app.yml
+++ b/env/k8s/app.yml
@@ -1,51 +1,51 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: bananapp
+  name: banapp
 spec:
   ports:
   - port: 80
     protocol: TCP
     targetPort: 8080
   selector:
-    app: bananapp
+    app: banapp
   type: LoadBalancer
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: bananapp
+  name: banapp
   namespace: default
   labels:
-    app: bananapp
+    app: banapp
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: bananapp
+      app: banapp
   template:
     metadata:
       labels:
-        app: bananapp
+        app: banapp
     spec:
       containers:
-      - name: bananapp
-        image: eu.gcr.io/bananapp/bananapp:1.0.0
+      - name: banapp
+        image: gcr.io/banapp/banapp:${CIRCLE_SHA1}
         imagePullPolicy: Always
         env:
         - name: MONGODB_URL
           valueFrom:
             secretKeyRef:
-              name: bananapp
+              name: banapp
               key: connection-string
         - name: OXFORD_APP_ID
           valueFrom:
             secretKeyRef:
-              name: bananapp
+              name: banapp
               key: oxford-app-id
         - name: OXFORD_APP_SECRET
           valueFrom:
             secretKeyRef:
-              name: bananapp
+              name: banapp
               key: oxford-app-secret
 ---
